--- a/app/src/main/res/layout/dialog_file_picker.xml
+++ b/app/src/main/res/layout/dialog_file_picker.xml
@@ -47,8 +47,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:orientation="horizontal">
 
                 <com.google.android.material.chip.Chip
@@ -66,7 +66,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:orientation="horizontal"
                     app:singleLine="true" />
             </LinearLayout>
@@ -103,7 +102,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Select"
+                android:text="@string/add"
                 app:cornerRadius="10dp" />
         </LinearLayout>
     </LinearLayout>
