--- a/app/src/main/res/layout/fragment_seven_zip.xml
+++ b/app/src/main/res/layout/fragment_seven_zip.xml
@@ -86,6 +86,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="80dp"
         android:src="@drawable/ic_arrow_back"
+        style="?attr/floatingActionButtonSmallStyle"
         app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
