--- a/app/src/main/res/layout/password_input_open_with.xml
+++ b/app/src/main/res/layout/password_input_open_with.xml
@@ -32,6 +32,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:boxCornerRadiusTopStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusBottomEnd="10dp"
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
