--- a/app/src/main/res/layout/tar_option_dialog.xml
+++ b/app/src/main/res/layout/tar_option_dialog.xml
@@ -66,6 +66,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxCornerRadiusTopStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusBottomEnd="10dp"
             android:layout_margin="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
