--- a/app/src/main/res/layout/fragment_archive.xml
+++ b/app/src/main/res/layout/fragment_archive.xml
@@ -34,13 +34,41 @@
             android:minHeight="?attr/actionBarSize"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:indeterminate="true"
-        android:layout_gravity="center"/>
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+            <include layout="@layout/shimmer_placeholder_item" />
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
