--- a/app/src/main/res/drawable/home_selector.xml
+++ b/app/src/main/res/drawable/home_selector.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -16,15 +15,7 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/home"
-        android:icon="@drawable/home_selector"
-        android:title="@string/home" />
-
-    <item
-        android:id="@+id/archive"
-        android:icon="@drawable/archive_selector"
-        android:title="@string/archive" />
-</menu>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true" android:drawable="@drawable/ic_home" />
+    <item android:state_checked="false" android:drawable="@drawable/ic_home_border" />
+</selector>
