--- a/app/src/main/res/layout/dialog_file_picker.xml
+++ b/app/src/main/res/layout/dialog_file_picker.xml
@@ -76,9 +76,42 @@
         </HorizontalScrollView>
 
         <FrameLayout
-         android:layout_width="match_parent"
-         android:layout_height="0dp"
-         android:layout_weight="1">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_view_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                    <include layout="@layout/shimmer_placeholder_item" />
+                </LinearLayout>
+            </com.facebook.shimmer.ShimmerFrameLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -97,7 +130,7 @@
                 style="?attr/floatingActionButtonSmallStyle"
                 app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                 android:src="@drawable/ic_arrow_back"/>
-         </FrameLayout>
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/buttonPanel"
