--- a/app/src/main/res/layout/dialog_file_picker.xml
+++ b/app/src/main/res/layout/dialog_file_picker.xml
@@ -49,6 +49,7 @@
                 android:layout_alignParentEnd="true"
                 app:icon="@drawable/ic_add"
                 app:cornerRadius="10dp"
+                android:visibility="gone"
                 style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"/>
         </RelativeLayout>
 
@@ -121,41 +122,43 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
-                android:layout_margin="16dp"
-                style="?attr/floatingActionButtonSmallStyle"
-                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
-                android:src="@drawable/ic_arrow_back"/>
         </FrameLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/buttonPanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@color/md_theme_surface"
-            android:padding="16dp">
+            android:layout_margin="16dp">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnCancel"
-                style="@style/Widget.Material3.Button.TextButton"
-                android:layout_width="0dp"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/cancel" />
+                app:cornerRadius="10dp"
+                android:layout_centerVertical="true"
+                app:icon="@drawable/ic_close"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSelect"
                 style="@style/Widget.Material3.Button.TonalButton"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/btnCancel"
                 android:text="@string/add"
                 app:cornerRadius="10dp" />
-        </LinearLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/fabBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                app:cornerRadius="10dp"
+                app:icon="@drawable/ic_arrow_back"/>
+        </RelativeLayout>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
