--- a/app/src/main/res/layout/fragment_seven_zip.xml
+++ b/app/src/main/res/layout/fragment_seven_zip.xml
@@ -78,23 +78,30 @@
             tools:listitem="@layout/item_file" />
     </RelativeLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_back"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="80dp"
-        android:src="@drawable/ic_arrow_back"
-        style="?attr/floatingActionButtonSmallStyle"
-        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_add_file"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_add"
-        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />
+        android:layout_gravity="bottom">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/fab_add_file"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/fab_back"
+            android:layout_marginEnd="10dp"
+            style="@style/Widget.Material3.Button.TonalButton"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/ic_add"
+            android:text="@string/add"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/fab_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+            app:cornerRadius="10dp"
+            android:layout_alignParentEnd="true"
+            app:icon="@drawable/ic_arrow_back"/>
+    </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
